[package]
name = "qmsolve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calm_io = "0.1.1"
clap = { version = "4.3.8", features = ["derive"] }
csv = "1.2.2"
eyre = "0.6.8"
quine-mc_cluskey = { git = "https://github.com/oli-obk/quine-mc_cluskey", version = "0.2.4" }
